# MediaServer

./: CMakeLists.txt  compile_commands.json  config.json  main.cpp
controllers/: AlbumArtController.cpp  AlbumArtController.h  AlbumManagementController.cpp  MusicController.cpp  MusicController.h  MusicLibraryController.cpp  MusicLibraryController.h  MusicMetadataController.cpp  MusicMetadataController.h  MusicPlaybackController.cpp  MusicPlaybackController.h  MusicScanController.cpp  PlayerController.cpp  PlayerController.h  PowerController.cpp  PowerController.h  SimplePlayerController.cpp  SimplePlayerController.h  VideoController.cc  VideoController.cpp  VideoController.h
controllers/albums/: AlbumArtController.cpp  AlbumArtController.h  AlbumManagementController.cpp  AlbumManagementController.h
controllers/music/: MusicController.cpp  MusicController.h  MusicLibraryController.cpp  MusicMetadataController.cpp  MusicPlaybackController.cpp  MusicPlaybackController.h  MusicScanController.cpp  MusicScanController.h
controllers/player/: PlayerController.cpp  PlayerController.h
controllers/power/: PowerController.cpp  PowerController.h
controllers/system/: MonitorController.cpp  MonitorController.h  ThreadMonitorController.cpp  ThreadMonitorController.h
controllers/video/: MkvAudioChannelController.cpp  MkvAudioChannelController.h  VideoController.cpp  VideoController.h
database/: MusicDatabase.cpp  MusicDatabase.h
info/: MonitorInfo.cpp  MonitorInfo.h
models/: MkvAudioTrackInfo.cpp  MkvAudioTrackInfo.h  MusicMetadata.h
player/: Player.cpp  Player.h
profilers/: Profiler.cpp  Profiler.h
scripts/: media-explorer-drogon.in  media-explorer-drogon.service.in
services/: AlbumArtExtractor.cpp  AlbumArtExtractor.h  AlsaMixer.cpp  AlsaMixer.h  MetadataService.cpp  MetadataService.h  MusicMetadataExtractor.cpp  MusicMetadataExtractor.h  MusicScanner.cpp  MusicScanner.h  PlayerManager.cpp  PlayerManager.h  PlayerService.cpp  PlayerService.h  PowerService.cpp  PowerService.h  ThumbnailCache.cpp  ThumbnailExtractor.cpp  ThumbnailExtractor.h  VideoPlayerManager.cpp  VideoPlayerManager.h
services/music/: AlbumArtService.cpp  AlbumArtService.h  AlbumArtWriter.cpp  AlbumArtWriter.h  MetadataCache.cpp  MetadataCache.h  MetadataExtractor.cpp  MetadataExtractor.h  MusicScanner.cpp  MusicScanner.h  PlaylistManager.cpp  PlaylistManager.h  ResponseBuild.cpp  ResponseBuilder.h
services/player/: AudioOutputSwitcher.cpp  AudioOutputSwitcher.h  AutoAdvanceTracker.cpp  AutoAdvanceTracker.h  MetadataParser.cpp  MetadataParser.h  MkvAudioChannel.cpp  MkvAudioChannel.h  MpvCommandSender.cpp  MpvCommandSender.h  PlayerSessionManager.cpp  PlayerSessionManager.h  TrackListManager.h  TrackLoader.cpp  TrackLoader.h  TracklistManager.cpp  TracklistManager.h  Volumer.cpp  Volumer.h
services/system/: AlsaMixer.cpp  AlsaMixer.h  MonitorService.cpp  MonitorService.h  PowerService.cpp  PowerService.h
services/system/static/: MonitorService.cpp  MonitorService.h
services/video/: FileSystemService.cpp  FileSystemService.h  PlaybackService.cpp  PlaybackService.h  PlaybackStatus.cpp  PlaybackStatus.h  StaticFileService.cpp  StaticFileService.h  ThreadMonitor.cpp  ThreadMonitor.h  ThumbnailCache.cpp  ThumbnailCache.h  ThumbnailRequestHandler.cpp  ThumbnailRequestHandler.h  ThumbnailService.cpp  ThumbnailService.h  TrashHandler.cpp  TrashHandler.h  VideoControlHandler.cpp  VideoControlHandler.h
tagger/: TagEditor.cpp  TagEditor.h
views/: index.html
